<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="0"
        android:inputType="textMultiLine"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:gravity="end"
        android:textColor="@color/green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/c"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_degree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/x2"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/period"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/division"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/seven"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/eight"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/nine"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/multiplication"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/six"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/five"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/four"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/plus"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/three"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/two"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/one"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/but_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/minus"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"

            />
        <Button
            android:id="@+id/but_equally"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:text="@string/equally"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>

</LinearLayout>